<?xml version="1.0"?>
<package>
  <name>mrb_vrep_common</name>
  <version>0.0.0</version>
  <description>The matlab_ros_bridge plugin package for vrep_common</description>

  <maintainer email="riccardo.spica@irisa.fr">Riccardo Spica</maintainer>
  <maintainer email="giovanni.claudio@inria.fr">Giovanni Claudio</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/matlab_ros_bridge</url>

  <author email="riccardo.spica@inria.fr">Riccardo Spica</author>
  
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>vrep_common</build_depend>
  <build_depend>matlab_ros_bridge</build_depend>
  <build_depend>topic_tools</build_depend>
  <build_depend>cmake_module_matlab</build_depend>
  <build_depend>topic_tools</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>vrep_common</run_depend>
  <run_depend>matlab_ros_bridge</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->
    <matlab_ros_bridge mdl_path="models/vrep_common" />
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
